2012-04-12  Petasis George  <petasis@iit.demokritos.gr>
	TkDND 2.4 released.
	* library/tkdnd_unix.tcl:
	* unix/TkDND_XDND.c:
	* unix/tkUnixSelect.c:
	* unix/tkSelect.h: Modifications to support Linux drops.

	* tclconfig/*:
	* configure.in, Makefile.in: Updated to TEA 3.9.

	* library/tkdnd_unix.tcl: Removed braces from a comment in
	xdnd::_GetDroppedData, left from testing with TIP 370 preliminary
	implementation. SF Bug ID: 3516862

2012-03-03  Petasis George  <petasis@iit.demokritos.gr>
	TkDND 2.3 released.
	* library/tkdnd_windows.tcl:
	* win/OleDND.h:
	* win/TkDND_OleDND.cpp: Fix in TkDND_DropSource::QueryContinueDrag,
	to support dragging with all mouse buttons. Bug reported by
	Michael Fersch.

2011-09-24  Petasis George  <petasis@iit.demokritos.gr>
	* win/OleDND.h: Added definition of WINVER to version 5, when compiling
	with MinGW, which defines it with version 4. SF Bug ID: 3411338.

2011-09-23  Petasis George  <petasis@iit.demokritos.gr>
	* win/OleDND.h: Modified STRING_(s), to ease compilation with MinGW.
	Patch provided by Hans-Christoph Steiner. SF Bug ID: 3411338.

2011-09-22  Petasis George  <petasis@iit.demokritos.gr>
	* win/OleDND.h: Added a check if CF_DIBV5 is defined (i.e.
	WINVER < 0x0500). SF Bug ID: 3411338.

2011-03-18  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd_unix.tcl: Fixed a bug in xdnd::_GetDroppedData, where
	an improper error was thrown in case no common types were found between
	the drag source and drop target widgets. Now a more appropriate error
	is returned. Bug reported by Kevin Walzer.

2011-01-14  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd_unix.tcl: Added support for accepting drops, if
	TIP 370 is finally approved. Changes tested with a preliminary TIP 370
	implementation.

	* library/tkdnd_macosx.tcl: Fixed a bug reported by Kevin Walzer:
	macdnd::_GetDroppedData and xdnd::_GetDroppedData were missing the
	"time" argument, added in the XDND section for TIP 370 (if it gets
	accepted).
